--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "saved-selections",
+    "name": "find-and-replace",
     "version": "1.0.0",
-    "description": "A Figma plugin to sort text objects",
+    "description": "A Figma plugin to find and replace text",
     "main": "dist/code.js",
     "scripts": {
-        "build": "npx webpack --mode=production",
+        "build": "npx webpack --mode=production && git add --all && git commit && git push",
         "dev": "npx webpack --mode=development --watch",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
