--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
-  "name": "Find & Replace",
+  "name": "Find and Replace",
   "id": "905964570877397972",
   "api": "1.0.0",
   "main": "dist/code.js",
-  "ui": "dist/ui.html"
+  "ui": "dist/ui.html",
+  "editorType": ["figma"]
 }
